--- a/fly.toml
+++ b/fly.toml
@@ -1,14 +1,12 @@
-# fly.toml app configuration file generated for go-tmpl on 2024-02-16T11:19:32+01:00
+# fly.toml app configuration file generated for go-tmpl-spring-darkness-510 on 2024-02-16T12:19:37+01:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'go-tmpl'
+app = 'go-tmpl-spring-darkness-510'
 primary_region = 'ams'
 
 [build]
-  [build.args]
-    GO_VERSION = '1.22.0'
 
 [env]
   PORT = '8080'
