--- a/.air.toml
+++ b/.air.toml
@@ -14,14 +14,14 @@ tmp_dir = "tmp"
   follow_symlink = false
   full_bin = ""
   include_dir = []
-  include_ext = ["go", "tpl", "tmpl", "html"]
+  include_ext = ["go", "tpl", "tmpl", "templ", "html"]
   include_file = []
   kill_delay = "0s"
   log = "build-errors.log"
   poll = false
   poll_interval = 0
   post_cmd = []
-  pre_cmd = ["./tailwindcss -i static/input.css -o static/output.css", "templ generate"]
+  pre_cmd = ["./tailwindcss -i static/input.css -o static/styles.css", "templ generate"]
   rerun = false
   rerun_delay = 500
   send_interrupt = false
